--- a/src/main/webapp/WEB-INF/views/note/list.html
+++ b/src/main/webapp/WEB-INF/views/note/list.html
@@ -27,5 +27,12 @@
     </th:block>
 </table>
 
+<div>
+    <a th:href="@{'/note'(page=${notes.number -1})}" th:if="${notes.hasPrevious()}">Previous</a>
+    <span th:text="${notes.number +1}"></span>/<span th:text="${notes.totalPages}"></span>
+    <a th:href="@{'/note'(page=${notes.number +1})}" th:if="${notes.hasNext()}">Next</a>
+</div>
+
+
 </body>
 </html>
