--- a/src/main/webapp/WEB-INF/views/note/list.html
+++ b/src/main/webapp/WEB-INF/views/note/list.html
@@ -10,6 +10,12 @@
 
 <p><a href="/create-note">Add New Note</a> </p>
 
+<form>
+    Search by title:
+    <input name="title" type="text">
+    <input type="submit" value="Search">
+</form><br/>
+
 <table border="1">
     <tr>
         <th>Title</th>
